<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="SimpleAudioRecorder">SimpleAudioRecorder</string>

    <string name="main_status">状态：%s</string>
    <string name="main_start">录音</string>
    <string name="main_stop">停止</string>
    <string name="main_files">文件</string>
    <string name="basic_functions">Basic functions</string>
    <string name="sound_volume">0dp</string>
    <string name="main_audio_format">请选择音频格式：</string>
    <string name="format_pcm">.pcm</string>
    <string name="format_mp3">.mp3</string>
    <string name="format_wav">.wav</string>
    <string name="main_simple_rate">请选择音频采样率（kHz）：</string>
    <string name="simple_rate_8k">8</string>
    <string name="simple_rate_16k">16</string>
    <string name="simple_rate_44k">44.1</string>
    <string name="simple_rate_48k">48</string>
    <string name="main_bit_width">请选择音频位宽：</string>
    <string name="bit_width_8">8 Bit</string>
    <string name="bit_width_16">16Bit</string>
    <string name="main_audio_source">音源：</string>
    <string name="audio_source_mic">麦克风</string>
    <string name="audio_source_internal">内录</string>
    <string name="main_number_visualization">可视化样式(上)：</string>
    <string name="main_waveform_visualization">可视化样式(下)：</string>
    <string name="audio_files">录音文件</string>
    <string name="play">播放</string>
    <string name="delete">删除</string>
    <string name="file_activity_title">录音文件</string>
    <string name="record_duration">00:00</string>
</resources>
